<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.ibissource</groupId>
	<artifactId>frank-doc-parent</artifactId>
	<version>2.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Frank!Doc Parent</name>
	<description>Documentation application for the Frank!Framework</description>
	<url>https://github.com/ibissource/frank-doc</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>

	<prerequisites>
		<maven>3.2.5</maven>
	</prerequisites>

	<organization>
		<name>ibissource.org</name>
		<url>https://ibissource.org</url>
	</organization>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>manual</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Martijn Dirkse</name>
			<email>martijn@ibissource.org</email>
			<organization>WeAreFrank!</organization>
			<organizationUrl>https://wearefrank.nl</organizationUrl>
		</developer>
		<developer>
			<name>Niels Meijer</name>
			<email>niels@ibissource.org</email>
			<organization>Ibissource</organization>
			<organizationUrl>https://ibissource.org</organizationUrl>
		</developer>
		<developer>
			<name>Gerrit van Brakel</name>
			<email>gerrit@ibissource.org</email>
			<organization>Ibissource</organization>
			<organizationUrl>https://ibissource.org</organizationUrl>
		</developer>
		<developer>
			<name>Sergi Philipsen</name>
			<email>sergi@wearefrank.nl</email>
			<organization>WeAreFrank!</organization>
			<organizationUrl>https://wearefrank.nl</organizationUrl>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/ibissource/frank-doc</url>
		<connection>scm:git:https://github.com/ibissource/frank-doc.git</connection>
		<developerConnection>scm:git:https://github.com/ibissource/frank-doc.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<build>
		<defaultGoal>install</defaultGoal>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.3.0</version>
					<configuration>
						<archive>
							<addMavenDescriptor>true</addMavenDescriptor>
							<manifest>
								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							</manifest>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.3.0</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<phase>prepare-package</phase>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>default-modules</id><!-- Profile defaults to ON, when the property is set it will turn off -->
			<activation>
				<property>
					<name>!no-default-modules</name>
				</property>
			</activation>
			<modules>
				<module>frank-doc-doclet</module>
				<module>frank-doc-frontend</module>
			</modules>
		</profile>
		<profile>
			<id>ibissource</id>
			<distributionManagement>
				<repository>
					<id>ibissource</id>
					<url>https://nexus.frankframework.org/content/repositories/releases</url>
				</repository>
				<snapshotRepository>
					<id>ibissource</id>
					<url>https://nexus.frankframework.org/content/repositories/snapshots</url>
				</snapshotRepository>
				<site>
					<id>www.ibissource.org</id>
					<url>file:target/site-deploy</url>
				</site>
			</distributionManagement>
			<repositories>
				<repository>
					<id>ibissource</id>
					<url>https://nexus.frankframework.org/content/groups/public</url>
				</repository>
			</repositories>
		</profile>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<configuration>
							<passphrase>${gpg.passphrase}</passphrase>
							<gpgArguments>
								<!-- This is necessary for gpg to not try to use the pinentry programs -->
								<arg>--batch</arg>
								<arg>--no-tty</arg>
								<arg>--pinentry-mode</arg>
								<arg>loopback</arg>
							</gpgArguments>
						</configuration>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.13</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>ossrh</id>
			<distributionManagement>
				<repository>
					<id>ossrh</id>
					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
				</repository>
				<snapshotRepository>
					<id>ossrh</id>
					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
				</snapshotRepository>
				<site>
					<id>www.ibissource.org</id>
					<url>file:target/site-deploy</url>
				</site>
			</distributionManagement>
		</profile>
	</profiles>
</project>
